modified backgroundcolor and alignment of text issues

--- a/src/app/statement/(protected)/account-statement-self/accountStatements/account-overview-status/account.overview.status.module.css
+++ b/src/app/statement/(protected)/account-statement-self/accountStatements/account-overview-status/account.overview.status.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  padding: 16px 24px;
+  padding: 16px 32px;
   width: 96%;
   height: auto;
   background: #ffffff;
@@ -16,7 +16,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding: 32px;
+  padding: 32px 0px;
   width: 100%;
   border-bottom: 1px solid #f9faf7;
 }
@@ -25,7 +25,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  padding: 32px;
+  padding: 32px 8px;
   gap: 24px;
   height: 40px;
 }
